@@ -11,6 +11,7 @@
 6. Handle renaming if random mixes.
 7. If using whole view for now-playing background and using wide desktop
    layout, then place cover vertically in the middle.
+8. Add hover play button to queue tracks.
 
 5.2.1
 -----
